resolved errors in swagger
